Fixed layout issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -113,7 +113,7 @@ $LOGO_HEIGHT:115px;
 
 #widget-content {
   width: 1290px;
-  height: 100%;
+  height: 570px;
   margin-right: auto;
   margin-left: auto;
   background: url(/images/widgetBG.png) repeat;
